// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SquareAppIcon component should render an app correctly with the app name 1`] = `
<div
  class="makeStyles-tileWrapper-11"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-9"
    >
      <div
        class="styles__SquareAppIcon-icon-container___39MRl"
      >
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangle"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-12 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-7 u-spacellipsis MuiTypography-h6 MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render an app correctly with the given name 1`] = `
<div
  class="makeStyles-tileWrapper-5"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-3"
    >
      <div
        class="styles__SquareAppIcon-icon-container___39MRl"
      >
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangle"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-6 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-1 u-spacellipsis MuiTypography-h6 MuiTypography-alignCenter"
  >
    modified
  </h6>
</div>
`;

exports[`SquareAppIcon component should render an app with the app slug if no name prop and app is a string 1`] = `
<div
  class="makeStyles-tileWrapper-17"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-15"
    >
      <div
        class="styles__SquareAppIcon-icon-container___39MRl"
      >
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangle"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-18 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-13 u-spacellipsis MuiTypography-h6 MuiTypography-alignCenter"
  >
    testslug
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in add state 1`] = `
<div
  class="makeStyles-tileWrapper-41"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___2SEuM styles__SquareAppIcon-wrapper-fx___3rcF6"
    >
      <div
        class="styles__SquareAppIcon-icon-container___39MRl"
      >
        <svg
          class="styles__icon___23x3R"
          height="16"
          style="fill: #fff;"
          viewBox="0 0 16 16"
          width="16"
        >
          <defs>
            <path
              d="M7 0h2v7h7v2H9v7H7V9H0V7h7z"
              id="plus_svg__a"
            />
          </defs>
          <use
            fill-rule="evenodd"
            xlink:href="#plus_svg__a"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangle"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-42 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-37 u-spacellipsis MuiTypography-h6 MuiTypography-alignCenter"
  />
</div>
`;

exports[`SquareAppIcon component should render correctly an app in error state 1`] = `
<div
  class="makeStyles-tileWrapper-35"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-33"
    >
      <div
        class="styles__SquareAppIcon-icon-container___39MRl"
      >
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorError"
      >
        <svg
          class="makeStyles-errorIcon-34 styles__icon___23x3R"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 9.75C7.30964 9.75 6.75 10.3096 6.75 11C6.75 11.6904 7.30964 12.25 8 12.25C8.69036 12.25 9.25 11.6904 9.25 11C9.25 10.3096 8.69036 9.75 8 9.75ZM8 4C7.48716 4 7.06449 4.38604 7.00673 4.88338L7 5V8C7 8.55228 7.44772 9 8 9C8.51284 9 8.93551 8.61396 8.99327 8.11662L9 8V5C9 4.44772 8.55228 4 8 4Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-36 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-31 u-spacellipsis MuiTypography-h6 MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in ghost state 1`] = `
<div
  class="makeStyles-tileWrapper-29"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___2SEuM styles__SquareAppIcon-wrapper-ghost___1ZALZ styles__SquareAppIcon-wrapper-fx___3rcF6"
    >
      <div
        class="styles__SquareAppIcon-icon-container___39MRl"
      >
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangle"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-30 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-25 u-spacellipsis MuiTypography-h6 MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in maintenance state 1`] = `
<div
  class="makeStyles-tileWrapper-23"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___2SEuM styles__SquareAppIcon-wrapper-maintenance___2ne2n makeStyles-shadow-21"
    >
      <div
        class="styles__SquareAppIcon-icon-container___39MRl"
      >
        <svg
          class="styles__c-app-icon___2_O40 styles__c-app-icon-default___3CEmt styles__icon___23x3R"
          height="100%"
          style="fill: var(--coolGrey);"
          viewBox="0 0 16 16"
          width="100%"
        >
          <path
            d="M1 11.009V5.5c0-.55.39-.773.872-.498l5.256 3.003c.476.272.872.944.872 1.495v5.508c0 .549-.39.772-.872.497l-5.256-3.003C1.396 12.231 1 11.56 1 11.01zm15 0c0 .55-.396 1.222-.872 1.494l-5.256 3.003c-.481.275-.872.052-.872-.497V9.5c0-.55.396-1.223.872-1.495l5.256-3.003c.481-.275.872-.052.872.498v5.508zM9.35 6.982c-.47.288-1.237.284-1.7 0l-4.8-2.954c-.47-.29-.463-.732.027-.995L7.623.477c.485-.261 1.264-.264 1.754 0l4.746 2.556c.485.26.49.71.027.995l-4.8 2.954z"
          />
        </svg>
      </div>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangle"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-24 MuiBadge-anchorOriginBottomRightRectangle MuiBadge-invisible"
    />
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-19 u-spacellipsis MuiTypography-h6 MuiTypography-alignCenter"
  >
    Test
  </h6>
</div>
`;

exports[`SquareAppIcon component should render correctly an app in shortcut state 1`] = `
<div
  class="makeStyles-tileWrapper-47"
  data-testid="square-app-icon"
>
  <span
    class="MuiBadge-root"
  >
    <span
      class="MuiBadge-root styles__SquareAppIcon-wrapper___2SEuM makeStyles-shadow-45"
      style="background-color: rgb(61, 166, 126);"
    >
      <h2
        class="MuiTypography-root makeStyles-letter-44 MuiTypography-h2 MuiTypography-alignCenter"
      >
        S
      </h2>
      <span
        class="MuiBadge-badge badgeSizeLarge MuiBadge-anchorOriginTopRightRectangle"
      />
    </span>
    <span
      class="MuiBadge-badge Component-qualifier-48 MuiBadge-anchorOriginBottomRightRectangle"
    >
      <svg
        class="styles__icon___23x3R"
        height="10"
        viewBox="0 0 16 16"
        width="10"
      >
        <path
          d="M9 0v2h3.5L6 8.5 7.5 10 14 3.5V7h2V1.003A.996.996 0 0014.997 0H9zM7 2V0H1.003A1 1 0 000 1v14c0 .552.445 1 1 1h14c.552 0 1-.438 1-1.003V9h-2v5H2V2h5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </span>
  <h6
    class="MuiTypography-root makeStyles-name-43 u-spacellipsis MuiTypography-h6 MuiTypography-alignCenter"
  >
    shortcut
  </h6>
</div>
`;
